--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,214 @@
-.container {
-  padding: 0 2rem;
+.main, .skills, .tools, .intro, .projects, .tags, .footer{
+  display: flex;
 }
-
+.main, .skills, .skills div, .web, .software, .container, .footer{
+  flex: 1;
+}
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+#skill_header, .container div, .footer p{
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+#skill_header, .skills{
+  width: 100%;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+#skill_header, .container h3{
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+#skill_header, .tags, .footer{
+  color: white;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+#skill_header, .skills, .stickyBtn, .footer{
+  background-color: #11253d;
+}
+
+#skill_header{
+  padding: 1em 0;
+}
+.skills, .projects, .footer{
+  justify-content: center;
+}
+
+.skills, .projects, .tags{
+  flex-flow: row wrap;
+}
+.skills{
+  padding: 0 6rem;
+}
+
+.tools{
+  width: 80%;
+  height: 60%;
+  margin: auto;
+  padding: 2rem 1.4rem;
+  justify-content: space-evenly;
+  background-color: black;
+  opacity: .6;
+}
+
+.Nav{
+  display: flex;
+  text-align: end;
+  padding: 1rem 1.2rem;
+}
+
+.Nav ul{
+  flex: 2;
+}
+
+.Nav ul li{
+  display: inline;
+  margin: 0 1rem;
+  font-weight: 500;
+}
+
+
+.intro{
+  flex-flow: row wrap-reverse;
+  padding: 4rem 6rem;
+  box-shadow: 0 2px 5px;
+  z-index: 3;
+}
+
+.intro div, .footer p{
+  flex: 2;
+}
+
+.intro div{
+  min-width: 300px;
+  margin-right: 2rem;
+  padding-right: 2rem;
+  border-right: 2px solid black;
+}
+
+.web, .software{
+  margin: 2rem;
+  min-width: 226px;
+  background-color: white;
+  border-radius: 1rem;
+}
+
+.web h3{
+  background-color: rgb(72, 183, 252);
+}
+
+.software h3{
+  background-color: rgb(47, 255, 64);
+}
+.projects{
+  max-width: 780px;
+  margin: 2em;
+}
+.container{
+  min-width: 322px;
+  max-width: 350px;
+  border: 1px solid lightslategrey;
+  border-radius: 1em;
+  margin: 1em;
+}
+
+.container:hover{
+  box-shadow: 0 0 12px rgb(102, 102, 247);
+}
+
+.container div{
+  padding: .4em;
+}
+
+.container span{
+  width: 100% !important;
+}
+
+.container img{
+  border-radius: 1em 1em 0 0;
+  margin: 0 !important;
+}
+
+.container button{
+  margin: 0 .5em;
+  border: 1px solid rgb(102, 102, 247);
+  border-radius: 8px;
+  padding: .4em 1.2em;
+}
+
+.tags span{
+  border-radius: 8px;
+  background-color: rgb(102, 102, 247);
+  margin: .3em;
+  padding: .2em .4em;
+  width: fit-content !important;
+}
+
+.stickyBtn{
+  height: 50px;
+  width: 50px;
+  border: none;
+  border-radius: 100%;
+  margin: 1rem;
+  color: white;
+  position: sticky;
+  bottom: 10px;
+  align-self: flex-end;
+}
+
+.footer {
+  padding: 2rem;
+  border-top: 1px solid #eaeaea;
+  align-items: center;
+}
+
+.footer a{
+  flex: .5;
+  text-align: start;
+  padding: 1em;
+  border: 1px solid white;
+}
+
+@media screen and (max-width: 790px) {
+  .intro div{
+    border-right: none;
+    border-top: 2px solid black;
   }
+
+  .footer p{
+    flex: 1;
+  }
+}
+@media (max-width: 550px){
+  .footer {
+    display: flex;
+    flex-flow: column-reverse;
+  }
+}
+
+@media  screen and (max-width: 340px) {
+  .container{
+    min-width: initial;
+    margin: 1em 0;
+  }
+
+  .intro div{
+    min-width: 260px;
+    margin:0;
+
+  }
+  .Nav{
+    text-align: center;
+  }
+ .Nav ul{
+   padding-inline-start: 0;
+ } 
+
+ .Nav ul li{
+   margin: 0 .5rem;
+ }
 }
