--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+ html {
+  scroll-behavior: smooth;
+ }
 
 a {
   color: inherit;
@@ -13,4 +16,29 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+header{
+  display: flex;
+  flex-flow: column;
+  height: 450px;
+  background: url("../public/background.jpg");
+  background-attachment: fixed;
+  background-position: center;
+}
+
+h3 {
+  text-align: center;
+  margin: 0;
+  padding: 1em;
+  border-radius: 1rem 1rem 0 0;
+}
+p {
+  line-height: 1.5em;
+}
+
+img{
+    height: inherit !important;
+    min-height: initial !important;
+    max-height: fit-content !important;
 }
