--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,7 +56,6 @@
 }
 
 .Nav{
-  width: 100%;
   display: flex;
   text-align: end;
   padding: 1rem 1.2rem;
@@ -74,7 +73,6 @@
 
 
 .intro{
-  width: 100%;
   flex-flow: row wrap-reverse;
   padding: 4rem 6rem;
   box-shadow: 0 2px 5px;
@@ -212,7 +210,7 @@
   }
 
   .intro div{
-    min-width: 260px;
+    min-width: 100%;
     margin:0;
 
   }
