--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -84,7 +84,7 @@
 }
 
 .intro div{
-  /* min-width: 300px; */
+  min-width: 300px;
   margin-right: 2rem;
   padding-right: 2rem;
   border-right: 2px solid black;
@@ -210,7 +210,9 @@
   }
 
   .intro div{
+    max-width: 100%;
     min-width: 100%;
+    padding: 4rem 2rem;
     margin:0;
 
   }
